--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,37 @@
+@import './index.css';
+
 .App a{background-color: lightsteelblue;
-  display:inline;}
+  }
 
   body{ 
     background-color:Lightblue;
     font-family: 'Nerko One', cursive, serif;
     justify-content: space-between;
-    display: -webkit-inline-box;
     margin: 0 10px;
+    text-align: center;
 
   }
+  
+  .section-center {
+    background:white;
+    color:burlywood;
+    border-radius: var(--radius);
+    box-shadow: var(--light-shadow);
+    transition: var(--transition);
+    padding: 2rem;
+  }
+
+ 
+.form{ 
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url(./component/img/data.png);
+  text-align: center;
+  text-decoration-color: slategrey;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  border: wheat;
+  margin: 0 10px;
+  color: whitesmoke;
+
+} 
+
