--- a/src/component/contentComponent/Login.css
+++ b/src/component/contentComponent/Login.css
@@ -1,5 +1,15 @@
-body{ 
+
+.form{ 
     background: Lightblue;
     font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1)), url(../img/Data4.jpg);
+    text-align: center;
+    text-decoration-color: slategrey;
+    columns: auto;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    border: wheat;
   
   }
